converting to React

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ logo/stix_laptop_0.png
 logo/stix_laptop_1.png
 logo/stix_laptop_2.png
 logo/stix_laptop_3.png
+node_modules
+gstix/public/logo192.png
+gstix/public/logo512.png
