--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ logo/stix_laptop_3.png
 node_modules
 gstix/public/logo192.png
 gstix/public/logo512.png
+gstix/src/Pics/standard_laptop.png
+gstix/src/Pics/stix_laptop_0.png
+gstix/src/Pics/stix_laptop_1.png
+gstix/src/Pics/stix_laptop_2.png
+gstix/src/Pics/stix_laptop_3.png
