--- a/reactversion/source/package.json
+++ b/reactversion/source/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "gstix",
+  "name": "source",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.2",
-    "react-test-renderer": "^16.13.1"
+    "react-scripts": "3.4.2"
   },
-  "homepage":"https://graphieros.com/gstix",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
