with 3 functional submenus for BIO

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ gstix/src/Pics/stix_laptop_0.png
 gstix/src/Pics/stix_laptop_1.png
 gstix/src/Pics/stix_laptop_2.png
 gstix/src/Pics/stix_laptop_3.png
+reactversion/source/src/assets/alp0.png
