painting gallery done

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,23 @@ gstix/src/Pics/stix_laptop_1.png
 gstix/src/Pics/stix_laptop_2.png
 gstix/src/Pics/stix_laptop_3.png
 reactversion/source/src/assets/alp0.png
+reactversion/source/src/assets/vanite.jpg
+reactversion/source/src/assets/sousLeMasque.jpg
+reactversion/source/src/assets/socrate2.png
+reactversion/source/src/assets/socrate.jpg
+reactversion/source/src/assets/parler.jpg
+reactversion/source/src/assets/painting_small.jpg
+reactversion/source/src/assets/origin.jpg
+reactversion/source/src/assets/origin_1.jpg
+reactversion/source/src/assets/oeil.jpg
+reactversion/source/src/assets/manifeste.jpg
+reactversion/source/src/assets/K-code.jpg
+reactversion/source/src/assets/ile.jpg
+reactversion/source/src/assets/fil.jpg
+reactversion/source/src/assets/envol.jpg
+reactversion/source/src/assets/chat_small.jpg
+reactversion/source/src/assets/atome.jpg
+reactversion/source/src/assets/apresDemain.jpg
+reactversion/source/public/android-chrome-192x192.png
+reactversion/source/public/android-chrome-512x512.png
+reactversion/source/public/apple-touch-icon.png
