web portfolio attempt

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ reactversion/source/src/assets/apresDemain.jpg
 reactversion/source/public/android-chrome-192x192.png
 reactversion/source/public/android-chrome-512x512.png
 reactversion/source/public/apple-touch-icon.png
+reactversion/source/src/assets/ka.mp4
+reactversion/source/src/assets/yohannLaveant.mp4
