misc cosmetic arrangements

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ reactversion/source/public/android-chrome-512x512.png
 reactversion/source/public/apple-touch-icon.png
 reactversion/source/src/assets/ka.mp4
 reactversion/source/src/assets/yohannLaveant.mp4
+reactversion/source/src/assets/graphieros.mp4
