--- a/reactversion/source/package.json
+++ b/reactversion/source/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.2"
   },
+  "homepage":"https://graphieros.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
