with a few texts

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ reactversion/source/public/apple-touch-icon.png
 reactversion/source/src/assets/ka.mp4
 reactversion/source/src/assets/yohannLaveant.mp4
 reactversion/source/src/assets/graphieros.mp4
+reactversion/source/src/assets/accords.png
+reactversion/source/src/assets/cle.png
+reactversion/source/src/assets/hexagerations.png
+reactversion/source/src/assets/objedtDesir.png
