--- a/reactversion/source/package.json
+++ b/reactversion/source/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3"
   },
-  "homepage":"https://graphieros.com",
+  "homepage": "https://graphieros.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
