--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,20 @@ reactversion/source/src/assets/accords.png
 reactversion/source/src/assets/cle.png
 reactversion/source/src/assets/hexagerations.png
 reactversion/source/src/assets/objedtDesir.png
+reactversion/source2/src/config/config.js
+reactversion/source2/src/assets/galeriePics/apresDemain.jpg
+reactversion/source2/src/assets/galeriePics/atome.jpg
+reactversion/source2/src/assets/galeriePics/chat_small.jpg
+reactversion/source2/src/assets/galeriePics/envol.jpg
+reactversion/source2/src/assets/galeriePics/fil.jpg
+reactversion/source2/src/assets/galeriePics/ile.jpg
+reactversion/source2/src/assets/galeriePics/K-code.jpg
+reactversion/source2/src/assets/galeriePics/manifeste.jpg
+reactversion/source2/src/assets/galeriePics/oeil.jpg
+reactversion/source2/src/assets/galeriePics/origin_1.jpg
+reactversion/source2/src/assets/galeriePics/origin.jpg
+reactversion/source2/src/assets/galeriePics/parler.jpg
+reactversion/source2/src/assets/galeriePics/socrate.jpg
+reactversion/source2/src/assets/galeriePics/socrate2.png
+reactversion/source2/src/assets/galeriePics/sousLeMasque.jpg
+reactversion/source2/src/assets/galeriePics/vanite.jpg
