--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ reactversion/source2/src/assets/galeriePics/socrate.jpg
 reactversion/source2/src/assets/galeriePics/socrate2.png
 reactversion/source2/src/assets/galeriePics/sousLeMasque.jpg
 reactversion/source2/src/assets/galeriePics/vanite.jpg
+reactversion/source2/src/assets/galeriePics/entendre.jpg
+reactversion/source2/src/assets/galeriePics/Kcode.jpg
+reactversion/source2/src/assets/galeriePics/voir.jpg
