--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ reactversion/source2/src/assets/galeriePics/vanite.jpg
 reactversion/source2/src/assets/galeriePics/entendre.jpg
 reactversion/source2/src/assets/galeriePics/Kcode.jpg
 reactversion/source2/src/assets/galeriePics/voir.jpg
+reactversion/source2/src/assets/alp.jpg
+reactversion/source2/src/assets/vitruve.jpg
