--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ reactversion/source2/src/assets/galeriePics/Kcode.jpg
 reactversion/source2/src/assets/galeriePics/voir.jpg
 reactversion/source2/src/assets/alp.jpg
 reactversion/source2/src/assets/vitruve.jpg
+_reactversion/source2/backend/Router.js
+reactversion/source2/backend/Main.js
+reactversion/source2/backend/creator.js
