--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ reactversion/source2/src/assets/vitruve.jpg
 _reactversion/source2/backend/Router.js
 reactversion/source2/backend/Main.js
 reactversion/source2/backend/creator.js
+reactversion/source2/src/assets/vitruve.png
