--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ _reactversion/source2/backend/Router.js
 reactversion/source2/backend/Main.js
 reactversion/source2/backend/creator.js
 reactversion/source2/src/assets/vitruve.png
+reactversion/source2/src/assets/zoomin.mp4
