--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ reactversion/source2/backend/Main.js
 reactversion/source2/backend/creator.js
 reactversion/source2/src/assets/vitruve.png
 reactversion/source2/src/assets/zoomin.mp4
+reactversion/source2/src/assets/galeriePics/lamusique.jpg
+reactversion/source2/src/assets/galeriePics/parle.jpg
+reactversion/source2/src/assets/galeriePics/euprattein.jpg
