--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,12 @@ reactversion/source2/src/assets/zoomin.mp4
 reactversion/source2/src/assets/galeriePics/lamusique.jpg
 reactversion/source2/src/assets/galeriePics/parle.jpg
 reactversion/source2/src/assets/galeriePics/euprattein.jpg
+reactversion/source2/src/assets/books/accords.png
+reactversion/source2/src/assets/books/cle.png
+reactversion/source2/src/assets/books/hexagerations.png
+reactversion/source2/src/assets/books/objedtDesir.png
+reactversion/source2/src/assets/books/painting_small.jpg
+reactversion/source2/src/assets/video/screenShotCM.png
+reactversion/source2/src/assets/video/touchWriterDemo.mp4
+reactversion/source2/src/assets/video/yohannLaveant.mp4
+reactversion/source2/src/assets/video/zoomin.mp4
