--- a/reactversion/source2/package.json
+++ b/reactversion/source2/package.json
@@ -2,7 +2,7 @@
   "name": "source2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://graphieros.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
