--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ reactversion/source2/src/assets/video/screenShotCM.png
 reactversion/source2/src/assets/video/touchWriterDemo.mp4
 reactversion/source2/src/assets/video/yohannLaveant.mp4
 reactversion/source2/src/assets/video/zoomin.mp4
+reactversion/source2/src/assets/face.jpg
+reactversion/source2/src/utils/GoogleAnalytics.js
+reactversion/source2/src/assets/books/pangolin.png
