--- a/reactversion/source2/package.json
+++ b/reactversion/source2/package.json
@@ -14,6 +14,7 @@
     "enzyme-adapter-react-16": "^1.15.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
