--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ reactversion/source2/src/assets/video/zoomin.mp4
 reactversion/source2/src/assets/face.jpg
 reactversion/source2/src/utils/GoogleAnalytics.js
 reactversion/source2/src/assets/books/pangolin.png
+reactversion/think/public/favicon.ico
+reactversion/think/public/logo192.png
+reactversion/think/public/logo512.png
