--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,6 @@ reactversion/think/public/logo192.png
 reactversion/think/public/logo512.png
 reactversion/think/.firebaserc
 reactversion/think/firebase.json
+reactversion/source3/public/logo512.png
+reactversion/source3/public/logo192.png
+reactversion/source3/public/favicon.ico
