--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,22 @@ reactversion/think/firebase.json
 reactversion/source3/public/logo512.png
 reactversion/source3/public/logo192.png
 reactversion/source3/public/favicon.ico
+reactversion/source3/src/assets/atome.jpg
+reactversion/source3/src/assets/chat_small.jpg
+reactversion/source3/src/assets/entendre.jpg
+reactversion/source3/src/assets/envol.jpg
+reactversion/source3/src/assets/euprattein.jpg
+reactversion/source3/src/assets/fil.jpg
+reactversion/source3/src/assets/ile.jpg
+reactversion/source3/src/assets/Kcode.jpg
+reactversion/source3/src/assets/lamusique.jpg
+reactversion/source3/src/assets/manifeste.jpg
+reactversion/source3/src/assets/oeil.jpg
+reactversion/source3/src/assets/origin_1.jpg
+reactversion/source3/src/assets/origin.jpg
+reactversion/source3/src/assets/parle.jpg
+reactversion/source3/src/assets/parler.jpg
+reactversion/source3/src/assets/socrate.jpg
+reactversion/source3/src/assets/socrate2.png
+reactversion/source3/src/assets/vanite.jpg
+reactversion/source3/src/assets/voir.jpg
