third version of graphieros.com done

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ reactversion/source3/src/assets/socrate.jpg
 reactversion/source3/src/assets/socrate2.png
 reactversion/source3/src/assets/vanite.jpg
 reactversion/source3/src/assets/voir.jpg
+reactversion/source3/src/assets/face.jpg
