--- a/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
+++ b/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
@@ -26,5 +26,19 @@
             "tew di go hea",
             "ne kpae vzu sa"
         ]
+    },
+    {
+        "frac_sequence":"ez-qw-wx-xd-ds ez-zq-qw-wx-xd-ds-sw",
+        "molecules":[
+            "v3ai le kto fra",
+            "kme rto kto soma"
+        ]
+    },
+    {
+        "frac_sequence":"zx-xw-we zq-qw-wz-qs",
+        "molecules":[
+            "stoia ney pnae sa",
+            "vi ldo grey hea"
+        ]
     }
 ]
