--- a/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
+++ b/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
@@ -54,5 +54,12 @@
             "sfi d3e fmai tra",
             "psie pkia kto fwo"
         ]
+    },
+    {
+        "frac_sequence":"wq-qz-ze-ed-dx qz-ze-ed-dx-xw-wq-qd-we-xz",
+        "molecules": [
+            "3e lea sa",
+            "kpae mea ftu"
+        ]
     }
 ]
