--- a/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
+++ b/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
@@ -97,5 +97,16 @@
             "Lieu fermé",
             "Âme ouverte"
         ]
+    },
+    {
+        "frac_sequence":"ws-sx-xw-qd-de-ez-zq ze-ed-dx-xw",
+        "molecules":[
+            "pno hia kto kadwa ftu",
+            "kloi dwa da ldo psoi"
+        ],
+        "translation": [
+            "ouvrir la pensée vers demain",
+            "fermer le chemin du vieux passé"
+        ]
     }
 ]
