--- a/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
+++ b/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
@@ -108,5 +108,16 @@
             "ouvrir la pensée vers demain",
             "fermer le chemin du vieux passé"
         ]
+    },
+    {
+        "frac_sequence":"eq-xq-dq-zs-sw qw-we qz-zx",
+        "molecules":[
+            "sta nrea di vrea",
+            "ma vrea di nrea"
+        ],
+        "translation":[
+            "voir le faux dans le vrai",
+            "être vrai dans le faux"
+        ]
     }
 ]
