--- a/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
+++ b/reactversion/source3/src/components/graphieros_subsite/subsite_library/ideas_library.json
@@ -152,5 +152,16 @@
             "penser rebondit sur soi",
             "marque sur le corps"
         ]
+    },
+    {
+        "frac_sequence":"xe-ez-zw-qw-ws wz-ze-ed-dq-qz",
+        "molecules":[
+            "rto kto psoi keo",
+            "le kto dvea nde"
+        ],
+        "translation":[
+            "retourner vers le passé bon",
+            "aller vers la racine"
+        ]
     }
 ]
